--- a/dl-a3_(3)_Q6.ipynb
+++ b/dl-a3_(3)_Q6.ipynb
@@ -4664,7 +4664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-05-19T14:40:07.236775Z",
@@ -4900,12 +4900,8 @@
     "        neruonsInFC, bidirectional, dropoutProb, learningRate, fontName\n",
     "    ):\n",
     "        '''loads dataset'''\n",
-    "        lang = \"bn\"\n",
+    "        lang = os.path.basename(os.path.dirname(root))\n",
     "        d = DatasetLoad()\n",
-    "        # if \"\\\\\" in root:\n",
-    "        #     lang = root[root.rfind(\"\\\\\")+1:]\n",
-    "        # else:\n",
-    "        #     lang = root[root.rfind(\"/\")+1:]\n",
     "        d.loadDataset(root, lang)\n",
     "        d.loadTestDataset(root, lang)\n",
     "        \n",
