--- a/dl-a3_(3)_Q6.ipynb
+++ b/dl-a3_(3)_Q6.ipynb
@@ -4816,6 +4816,7 @@
     "import itertools\n",
     "import torch.utils as utils\n",
     "import random\n",
+    "import os\n",
     "\n",
     "'''login to wandb to generate plot'''\n",
     "wandb.login()\n",
